2003-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* discrete.c (gsl_ran_discrete_preproc): fixed bug reported by
	ahoward <ahoward@pollux.usc.edu>

2003-01-25  Brian Gough  <brian.gough@network-theory.co.uk>

	* chisq.c: corrected comments

2002-12-10  Brian Gough  <bjg@network-theory.co.uk>

	* multinomial.c (gsl_ran_multinomial): added multinomial
	distribution

	* dirichlet.c (gsl_ran_dirichlet_lnpdf): added logpdf function for
	accuracy

Tue Aug 27 19:08:33 2002  Brian Gough  <bjg@network-theory.co.uk>

	* dirichlet.c: added dirichlet distribution

Sat Aug 18 22:21:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-randist.c: moved to top-level directory

Wed Jul 18 12:57:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* landau.c: added Landau distribution from Dave Morrison

Sat Jun 23 12:30:38 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gausstail.c (gsl_ran_gaussian_tail): allow negative values for
 	the tail cutoff parameter.

Mon May 21 12:17:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* shuffle.c (gsl_ran_choose): removed void * return value
	(gsl_ran_sample): removed void * return value

Tue Apr 24 17:10:47 2001  Brian Gough  <bjg@network-theory.co.uk>

	* bernoulli.c (gsl_ran_bernoulli_pdf): removed unnecessary
 	reference to gsl_sf.h

Mon Apr 23 10:25:44 2001  Brian Gough  <bjg@network-theory.co.uk>

	* changed calls to old specfunc _impl functions to use new error
 	handling conventions

Tue Apr 17 19:57:59 2001  Brian Gough  <bjg@network-theory.co.uk>

	* weibull.c (gsl_ran_weibull): changed parameter mu to a, since it
 	is not the mean
	(gsl_ran_weibull_pdf): changed parameter mu to a, since it
 	is not the mean

	* logistic.c (gsl_ran_logistic): changed parameter mu to a, since it
 	is not the mean
	(gsl_ran_logistic_pdf): changed parameter mu to a, since it
 	is not the mean

	* laplace.c (gsl_ran_laplace): changed parameter mu to a, since it
 	is not the mean
	(gsl_ran_laplace_pdf): changed parameter mu to a, since it